# malloctrace

./: .clang-format  .gitignore  CMakeLists.txt
gdb/: gdbinit.py
gdb/malloctrace/: __init__.py  cbridge.py  common.py  constants.py  ctypedefs.py  cvar.py  environment.py  exceptions.py  logging.py  malloctrace.py  params.py
gdb/malloctrace/command/: argparser.py  command.py
src/: backtrace.h  common.h  heap_map.c  heap_map.h  logging.c  logging.h  malloctrace.c  malloctrace.h
test/: main.c
